feat: migrate to openapi codegen (#385)
